@@ -1,3 +1,5 @@
+- set default per step banner title & icon for all steps
+
 Version 10.4.173 - 21 August 2007, by Olivier "blino" Blin
 
 - convert module names to module filenames
